# attribute-based-watermarking

./: .env.example  .gitignore  README.md  app.py  attr_x_nli.py  benchmark_ber_diagnostics.py  benchmark_interleaving.py  benchmark_io.py  benchmark_plot.py  benchmark_policy_detection.py  benchmark_watermark.py  check_report.py  closed_vocab.py  colab.ipynb  colab_reload.py  cot_reasoning.py  demo_baseline_batch.py  demo_watermark_batch.py  detect_diagnostics.py  model.py  pyproject.toml  randrecover.py  requirements.txt  test_attr_classification.py  test_balanced_partition.py  test_full_prob_sampling_generation.py  testing.py  text_attributes.py  watermarking.py  x_derivation.py
cprf/: __init__.py  cprf.go  cprf.h  cprf_test.go  test_cprf.py
data/: calibration_corpus.txt
data/partition_weights/: README.md  meta-llama_Llama-3.2-1B-Instruct_v128256.pt  meta-llama_Llama-3.2-3B-Instruct_v128256.pt
prc/: Cargo.toml  README.md  example.py  pyproject.toml
prc/examples/: test.rs
prc/src/: lib.rs  matrix.rs
scripts/: build_partition_weights.py
