[project]
name = "watermarking-for-llm"
version = "0.1.0"
description = "Attribute-based watermarking for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keybert>=0.9.0",
    "rich>=15.0.0",
    "torch==2.11.0",
    "transformers==5.5.4",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
]

# CUDA 12.6 wheels (replaces torch==2.11.0+cu126 from PyPI default index)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
