[project]
name = "watermarking-for-llm"
version = "0.1.0"
description = "Attribute-based watermarking for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "prc",
    "python-dotenv>=1.0.0",
    "rich>=12.4.4,<14",
    "torch==2.11.0",
    "transformers==5.5.4",
]

[project.optional-dependencies]
research = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]

# CUDA 12.6 wheels (replaces torch==2.11.0+cu126 from PyPI default index)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
# Rebuild the local PRC extension when its Rust sources change.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "prc/pyproject.toml" },
    { file = "prc/Cargo.toml" },
    { file = "prc/**/*.rs" },
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
prc = { path = "prc", editable = true }
